--- a/summary.css
+++ b/summary.css
@@ -27,6 +27,7 @@
     width: 65%;
     margin-top:20px;
     margin-bottom:20px;
+    padding: 10px;
     margin: auto;
 }
 
@@ -44,8 +45,9 @@
 .results_class {
     border: solid 3px rgba(0, 0, 0, 0.884);
     background-color: rgba(168, 190, 250, 0.884);
-    text-align: center;
-    width: 65%;
+    text-align: left;
+    width: 75%;
     margin-top: 20px;
     margin:auto;
+    padding: 10px;
 }
